user-profile added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <app-block class="top-right"></app-block>
   <app-block class="bottom-left"></app-block>
   <app-block class="bottom-right"></app-block>
+  <app-user-profile></app-user-profile>
 </div>
