one and two way binding

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -5,4 +5,9 @@
   <button type="button" (click)="showContent()">
     {{ mustShow ? "Show" : "Hide" }}
   </button>
+  <div>one way binding</div>
+  <input type="text" #myInput (keyup)="handleChange(myInput.value)" />
+  <span>{{ random }}</span>
+  <div>two ways binding</div>
+  <input type="text" [(ngModel)]="user.firstName" />
 </div>
