adding style and class using directives

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -9,5 +9,10 @@
   <input type="text" #myInput (keyup)="handleChange(myInput.value)" />
   <span>{{ random }}</span>
   <div>two ways binding</div>
-  <input type="text" [(ngModel)]="user.firstName" />
+  <input
+    type="text"
+    [(ngModel)]="user.firstName"
+    [ngClass]="mustShow ? 'border-red' : 'border-green'"
+    [ngStyle]="{ 'background-color': 'red' }"
+  />
 </div>
