--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="app">
-  <app-block></app-block>
-  <app-block class="top-right"></app-block>
-  <app-block class="bottom-left"></app-block>
-  <app-block class="bottom-right"></app-block>
-  <app-user-profile></app-user-profile>
+  <ul>
+    <li><a [routerLink]="['']">home</a></li>
+    <li><a [routerLink]="['list']">list</a></li>
+    <li><a [routerLink]="['user']">user</a></li>
+  </ul>
+  <router-outlet></router-outlet>
 </div>
