--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -14,4 +14,5 @@
     [(ngModel)]="user.firstName"
     [ngClass]="mustShow ? 'border-red' : 'border-green'"
   />
+  <app-fromulaire></app-fromulaire>
 </div>
